kyy-k8s-config/src/app/backend/short-url-web/short-url-web-r-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: short-url-web-r
  name: short-url-web-r
spec:
  rules:
    - host: r.kaoyaya.com
      http:
        paths:
          - backend:
              serviceName: short-url-web-r
              servicePort: 80
